src/components/Featured/Featured.module.css
.projectsGrid {
  padding: 0;
  margin: 0;
  list-style: none;
}

.projectsGrid a {
  position: relative;
  z-index: 1;
}

.project {
  position: relative;
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(12, 1fr);
  align-items: center;
}

@media (max-width: 768px) {
  .project {
    box-shadow: 0 10px 30px -15px var(--shadow);
  }
}

.project:not(:last-of-type) {
  margin-bottom: 120px;
}

@media (max-width: 768px) {
  .project:not(:last-of-type) {
    margin-bottom: 70px;
  }
}

@media (max-width: 480px) {
  .project:not(:last-of-type) {
    margin-bottom: 30px;
  }
}

.project:nth-of-type(odd) .projectContent {
  grid-column: 7 / -1;
  text-align: right;
}

@media (max-width: 1080px) {
  .project:nth-of-type(odd) .projectContent {
    grid-column: 5 / -1;
  }
}

@media (max-width: 768px) {
  .project:nth-of-type(odd) .projectContent {
    grid-column: 1 / -1;
    padding: 40px 40px 30px;
    text-align: left;
  }
}

@media (max-width: 480px) {
  .project:nth-of-type(odd) .projectContent {
    padding: 25px 25px 20px;
  }
}

.project:nth-of-type(odd) .projectTechList {
  justify-content: flex-end;
}

@media (max-width: 768px) {
  .project:nth-of-type(odd) .projectTechList {
    justify-content: flex-start;
  }

  .project:nth-of-type(odd) .projectTechList li {
    margin: 0 10px 5px 0;
  }
}

.project:nth-of-type(odd) .projectTechList li {
  margin: 0 0 5px 20px;
}

.project:nth-of-type(odd) .projectLinks {
  justify-content: flex-end;
  margin-left: 0;
  margin-right: -10px;
}

@media (max-width: 768px) {
  .project:nth-of-type(odd) .projectLinks {
    justify-content: flex-start;
    margin-left: -10px;
    margin-right: 0;
  }
}

.project:nth-of-type(odd) .projectImage {
  grid-column: 1 / 8;
}

@media (max-width: 768px) {
  .project:nth-of-type(odd) .projectImage {
    grid-column: 1 / -1;
  }
}

.projectContent {
  position: relative;
  grid-column: 1 / 7;
  grid-row: 1 / -1;
}

@media (max-width: 1080px) {
  .projectContent {
    grid-column: 1 / 9;
  }
}

@media (max-width: 768px) {
  .projectContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    grid-column: 1 / -1;
    padding: 40px 40px 30px;
    z-index: 5;
  }
}

@media (max-width: 480px) {
  .projectContent {
    padding: 30px 25px 20px;
  }
}

.projectOverline {
  margin: 10px 0;
  color: var(--accent-red);
  font-family: var(--font-mono);
  font-size: var(--fz-xs);
  font-weight: 400;
}

.projectTitle {
  color: var(--text-highlight);
  font-size: clamp(24px, 5vw, 28px);
}

@media (min-width: 768px) {
  .projectTitle {
    margin: 0 0 20px;
  }
}

@media (max-width: 768px) {
  .projectTitle {
    color: var(--white);
  }

  .projectTitle a {
    position: static;
  }

  .projectTitle a::before {
    content: "";
    display: block;
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }
}

.projectDescription {
  position: relative;
  z-index: 2;
  padding: 25px;
  border-radius: var(--border-radius);
  background-color: var(--dark-grey);
  color: var(--text-primary);
  font-size: var(--fz-lg);
  box-shadow: 0 10px 30px -15px var(--shadow);
  text-align: left;
}

@media (max-width: 768px) {
  .projectDescription {
    padding: 20px 0;
    background-color: transparent;
    box-shadow: none;
  }
}

.projectDescription a {
  color: var(--accent-red);
  position: relative;
}

.projectTechList {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  z-index: 2;
  margin: 25px 0 10px;
  padding: 0;
  list-style: none;
}

.projectTechList li {
  margin: 0 20px 5px 0;
  color: var(--text-primary);
  font-family: var(--font-mono);
  font-size: var(--fz-xs);
  white-space: nowrap;
}

@media (max-width: 768px) {
  .projectTechList {
    margin: 10px 0;
  }

  .projectTechList li {
    margin: 0 10px 5px 0;
    color: var(--text-highlight);
  }
}

.projectLinks {
  display: flex;
  align-items: center;
  position: relative;
  margin-top: 10px;
  margin-left: -10px;
  color: var(--text-highlight);
}

.projectLinks a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
}

.projectLinks svg {
  width: 20px;
  height: 20px;
}

.external svg {
  width: 22px;
  height: 22px;
  margin-top: -4px;
}

.cta {
  padding: 0.75rem 1rem;
  border: 1px solid var(--accent-red);
  border-radius: var(--border-radius);
  font-size: var(--fz-xs);
  font-family: var(--font-mono);
  color: var(--accent-red);
  background: transparent;
  transition: var(--transition);
}

.cta:hover {
  box-shadow: 3px 3px 0 0 var(--accent-red);
  transform: translate(-4px, -4px);
}

.projectImage {
  box-shadow: 0 10px 30px -15px var(--shadow);
  grid-column: 6 / -1;
  grid-row: 1 / -1;
  position: relative;
  z-index: 1;
}

@media (max-width: 768px) {
  .projectImage {
    grid-column: 1 / -1;
    height: 100%;
    opacity: 0.25;
  }
}

.projectImage a {
  width: 100%;
  height: 100%;
  background-color: var(--accent-red);
  border-radius: var(--border-radius);
  vertical-align: middle;
  position: relative;
  overflow: hidden;
}

.projectImage a:hover,
.projectImage a:focus {
  outline: 0;
  background: transparent;
}

.projectImage a:hover::before,
.projectImage a:hover .img,
.projectImage a:focus::before,
.projectImage a:focus .img {
  background: transparent;
  filter: none;
}

.projectImage a::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  inset: 0;
  z-index: 3;
  background-color: var(--charcoal);
  mix-blend-mode: screen;
  transition: var(--transition);
}

.img {
  display: block;
  width: 100%;
  height: auto;
  border-radius: var(--border-radius);
  mix-blend-mode: multiply;
  filter: grayscale(100%) contrast(1) brightness(90%);
  object-fit: cover;
}

@media (max-width: 768px) {
  .img {
    width: 100%;
    height: auto;
    object-fit: cover;
    filter: grayscale(100%) contrast(1) brightness(50%);
  }
}

